--- a/spring-teste-persistence/pom.xml
+++ b/spring-teste-persistence/pom.xml
@@ -2,10 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.bio-aba</groupId>
+	<parent>
+		<groupId>com.bio-aba</groupId>
+		<artifactId>spring-teste</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+
 	<artifactId>spring-teste-persistence</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
 
 	<name>spring-teste-persistence Maven Webapp</name>
 	<url>http://maven.apache.org</url>
