--- a/spring-teste-web/pom.xml
+++ b/spring-teste-web/pom.xml
@@ -3,10 +3,14 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.bio-aba</groupId>
+	<parent>
+		<groupId>com.bio-aba</groupId>
+		<artifactId>spring-teste</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+
 	<artifactId>spring-teste-web</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0-SNAPSHOT</version>
 
 	<name>spring-teste</name>
 	<url>http://maven.apache.org</url>
