Correções no controller e no validator, inclusão de log4j e correção nos xmls

--- a/spring-teste-web/src/main/resources/application.properties
+++ b/spring-teste-web/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #Database Configuration
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=localhost:3306
+jdbc.url=jdbc:mysql://localhost:3306/testespring
 jdbc.username=root
 jdbc.password=admin
 
 #Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=validate
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=true
