Fiz funcionar. Alterei as versões das dependencias hibernate para fins de compatibilidade. Incluí o persistenceContext.xml no applicationContext. Injetei a dependência do StudentService

--- a/spring-teste-persistence/pom.xml
+++ b/spring-teste-persistence/pom.xml
@@ -31,12 +31,17 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.1.4.Final</version>
+			<version>4.3.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.3.2.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.1.4.Final</version>
+			<version>4.3.2.Final</version>
 		</dependency>
 		
 		<!-- Dependências de Bancos de Dados -->
