--- a/spring-teste-core/pom.xml
+++ b/spring-teste-core/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>1.1.0.Final</version>
+			<version>1.0.0.GA</version>
 		</dependency>
 
 		<dependency>
@@ -47,17 +47,7 @@
 			<type>jar</type>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>2.5.4</version>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>1.8.0.RELEASE</version>
-		</dependency>
 		
 		<dependency>
 			<groupId>javax.inject</groupId>
